--- a/ormconfig.json
+++ b/ormconfig.json
@@ -1,10 +1,10 @@
 {
   "type": "postgres",  
-  "host": "localhost",
-  "port": 5432,
-  "username": "postgres",
-  "password": "docker",
-  "database": "web",
+  "host": "64.227.13.101",
+  "port": 35432,
+  "username": "master",
+  "password": "masterkey",
+  "database": "testab",
   "entities": [
     "./src/models/*.ts"
   ],
