--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "html-pdf": "^2.2.0",
     "jsonwebtoken": "^8.5.1",
     "jspdf": "^2.1.1",
+    "multer": "^1.4.2",
     "nodemailer": "^6.4.16",
     "pdfkit": "^0.11.0",
     "pg": "^8.2.1",
@@ -33,6 +34,7 @@
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.6",
     "@types/jsonwebtoken": "^8.5.0",
+    "@types/multer": "^1.4.5",
     "@typescript-eslint/eslint-plugin": "^4.22.0",
     "@typescript-eslint/parser": "^4.22.0",
     "eslint": "^7.25.0",
