--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,7 +6,7 @@
     "extends": [
         "airbnb-base",
         "plugin:@typescript-eslint/recommended",
-        "plugin:prettier/recommended"
+        // "plugin:prettier/recommended"
     ],
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
@@ -15,7 +15,7 @@
     },
     "plugins": [
         "@typescript-eslint",
-        "prettier"
+        // "prettier"
     ],
     "rules": {
       "no-use-before-define": "off",
@@ -29,7 +29,7 @@
           "ts": "never"
         }
       ],
-      "prettier/prettier": "error"
+      // "prettier/prettier": "error"
     },
     "settings": {
       "import/resolver": {
